force-app/main/default/objects/Authority_to_Submit__c/Authority_to_Submit__c.object-meta.xml
<CustomObject>
    <label>Authority to Submit</label>
    <nameField>
        <displayFormat>ATS-{00000}</displayFormat>
        <label>Form ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Authorities to Submit</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>