force-app/main/default/objects/Authority_to_Submit__c/fields/I_RS_50_word_citation__c.field-meta.xml
<CustomField>
    <fullName>I_RS_50_word_citation__c</fullName>
    <inlineHelpText>After consultation with your supervisors, please provide a 50-word plain language (lay terms) abstract to be included in the graduation booklet. A guide to writing citations can be downloaded using the adjacent link.</inlineHelpText>
    <label>50-word citation</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>