force-app/main/default/objects/Authority_to_Submit__c/fields/I_RS_Approval_Form_Instruction__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Approval_Form_Instruction__c</fullName>
    <formula>&quot;This is a summary view. To view the full ATS form, click on the form ID link.  &quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approval Form Instruction</label>
    <type>Text</type>
</CustomField>