force-app/main/default/objects/Authority_to_Submit__c/fields/I_RS_Candidate_declaration__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Candidate_declaration__c</fullName>
    <formula>&quot;• I confirm that the information I have provided is true and accurate&quot; &amp; br()&amp;
&quot;• I certify that my thesis/exegesis complies with the provisions in the &quot; &amp;  
HYPERLINK(&quot;https://policies.latrobe.edu.au/download.php?associated=1&amp;id=80&quot;, &quot;Graduate Research Examinations Schedule B-Presentation of Theses for Graduate Research Degrees&quot;, &quot;_blank&quot;) &amp;
&quot; and for practice-based degrees that the artefact(s) comply with the &quot; &amp; 
HYPERLINK(&quot;http://www.latrobe.edu.au/__data/assets/pdf_file/0008/724517/BGR16-23-Practice-Based-Guidelines-for-examination.pdf&quot;, &quot;Guidelines for examinable components of practice-based degrees by research.&quot;, &quot;_blank&quot;) &amp; br() &amp;
&quot;• I certify that I have had the opportunity to notify my supervisor of any known conflict of interest in the nomination of potential examiners.&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Candidate declaration</label>
    <type>Text</type>
</CustomField>