force-app/main/default/objects/Authority_to_Submit__c/fields/I_RS_Candidate_I_agree__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Candidate_I_agree__c</fullName>
    <defaultValue>false</defaultValue>
    <label>I agree</label>
    <type>Checkbox</type>
</CustomField>