force-app/main/default/objects/Authority_to_Submit__c/fields/I_RS_Citation_details__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Citation_details__c</fullName>
    <defaultValue>&quot;Only required for doctoral candidates&quot;</defaultValue>
    <label>Citation details</label>
    <length>39</length>
    <type>Text</type>
</CustomField>