force-app/main/default/objects/Authority_to_Submit__c/fields/I_RS_Date_of_event1__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Date_of_event1__c</fullName>
    <inlineHelpText>Enter the date or date range that the event will take place</inlineHelpText>
    <label>Event date/s</label>
    <length>255</length>
    <type>Text</type>
</CustomField>