force-app/main/default/objects/Authority_to_Submit__c/fields/I_RS_Degree__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Degree__c</fullName>
    <formula>I_RS_Graduate_Research_Examination__r.I_RS_Degree__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Degree</label>
    <type>Text</type>
</CustomField>