force-app/main/default/objects/Authority_to_Submit__c/fields/I_RS_Event1__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Event1__c</fullName>
    <defaultValue>&quot;Exhibition or performance&quot;</defaultValue>
    <inlineHelpText>Update item description as appropriate</inlineHelpText>
    <label>Event</label>
    <length>255</length>
    <type>Text</type>
</CustomField>