force-app/main/default/objects/Authority_to_Submit__c/fields/I_RS_Expected_work_submission_date__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Expected_work_submission_date__c</fullName>
    <formula>I_RS_Graduate_Research_Examination__r.I_RS_Expected_Work_Submission_Date__c</formula>
    <inlineHelpText>Date candidate is expected to submit their thesis by, as per the Graduate Research Candidature Policy.</inlineHelpText>
    <label>Expected work submission date</label>
    <type>Date</type>
</CustomField>