force-app/main/default/objects/Authority_to_Submit__c/fields/I_RS_Graduate_Research_Examination__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Graduate_Research_Examination__c</fullName>
    <inlineHelpText>Link to the candidate’s examination record</inlineHelpText>
    <label>Graduate Research Examination ID</label>
    <referenceTo>Graduate_Research_Examination__c</referenceTo>
    <relationshipLabel>Authorities to Submit</relationshipLabel>
    <relationshipName>Authorities_to_Submit</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>