force-app/main/default/objects/Authority_to_Submit__c/fields/I_RS_Guidelines_for_preparing_50word__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Guidelines_for_preparing_50word__c</fullName>
    <defaultValue>&quot;https://www.latrobe.edu.au/__data/assets/pdf_file/0018/707040/2016-GRS-Citations-Guide.pdf&quot;</defaultValue>
    <label>Guidelines for preparing 50word citation</label>
    <type>Url</type>
</CustomField>