force-app/main/default/objects/Authority_to_Submit__c/fields/I_RS_Item_to_be_submitted3__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Item_to_be_submitted3__c</fullName>
    <defaultValue>&quot;Durable record (slides of exhibition)&quot;</defaultValue>
    <inlineHelpText>Update item description as appropriate</inlineHelpText>
    <label>Item to be submitted</label>
    <length>255</length>
    <type>Text</type>
</CustomField>