force-app/main/default/objects/Authority_to_Submit__c/fields/I_RS_Link_to_practice_based_guidelines__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Link_to_practice_based_guidelines__c</fullName>
    <formula>HYPERLINK(&quot;http://www.latrobe.edu.au/__data/assets/pdf_file/0008/724517/BGR16-23-Practice-Based-Guidelines-for-examination.pdf&quot;, &quot;http://www.latrobe.edu.au/__data/assets/pdf_file/0008/724517/BGR16-23-Practice-Based-Guidelines-for-examination.pdf&quot;, &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Link to practice-based guidelines:</label>
    <type>Text</type>
</CustomField>