force-app/main/default/objects/Authority_to_Submit__c/fields/I_RS_Link_to_Schedule_B__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Link_to_Schedule_B__c</fullName>
    <formula>HYPERLINK(&quot;https://policies.latrobe.edu.au/download.php?associated=1&amp;id=80&quot;, &quot;https://policies.latrobe.edu.au/download.php?associated=1&amp;id=80&quot;,  &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Link to Schedule B:</label>
    <type>Text</type>
</CustomField>