force-app/main/default/objects/Authority_to_Submit__c/fields/I_RS_Name_to_appear_with_citation__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Name_to_appear_with_citation__c</fullName>
    <inlineHelpText>Your name will be listed as “Dr [Family name]” in your citation, eg “Dr Smith-Jones”. Please list how you would like your family name to appear in your citation.</inlineHelpText>
    <label>Name to appear with citation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>