force-app/main/default/objects/Authority_to_Submit__c/fields/I_RS_New_Authority_to_Submit__c.field-meta.xml
<CustomField>
    <fullName>I_RS_New_Authority_to_Submit__c</fullName>
    <defaultValue>&quot;A new Authority to Submit form will be created. You will be able to find it under the &apos;Authority To Submit&apos; section. Click Save to confirm.&quot;</defaultValue>
    <label>New Authority to Submit</label>
    <length>140</length>
    <type>Text</type>
</CustomField>