force-app/main/default/objects/Authority_to_Submit__c/fields/I_RS_Practice_based_degrees2__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Practice_based_degrees2__c</fullName>
    <formula>&quot;details of events requiring examiner attendance&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Practice-based degrees only:</label>
    <type>Text</type>
</CustomField>