force-app/main/default/objects/Authority_to_Submit__c/fields/I_RS_Practice_based_degrees__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Practice_based_degrees__c</fullName>
    <defaultValue>&quot;Please provide a list of all the separate examinable components to be submitted to GRS and the date they have been / will be submitted.&quot;</defaultValue>
    <label>Practice-based degrees hint</label>
    <length>140</length>
    <type>Text</type>
</CustomField>