force-app/main/default/objects/Authority_to_Submit__c/fields/I_RS_Practice_based_degrees_details_Hint__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Practice_based_degrees_details_Hint__c</fullName>
    <defaultValue>&quot;Please provide a list of any events (eg performance or exhibition) which the examiners have or will attend as part of the examination and the date&quot; &amp;&quot;/&quot; &amp;&quot;s they have been / will be held.&quot;</defaultValue>
    <label>Practice-based degrees: details  hint</label>
    <length>180</length>
    <type>Text</type>
</CustomField>