force-app/main/default/objects/Authority_to_Submit__c/fields/I_RS_SDGR_Approver_User__c.field-meta.xml
<CustomField>
    <fullName>I_RS_SDGR_Approver_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SDGR Approver User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Authorities_to_Submit1</relationshipName>
    <type>Lookup</type>
</CustomField>