force-app/main/default/objects/Authority_to_Submit__c/fields/I_RS_Status__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Supervisor Approval</fullName>
            </value>
            <value>
                <fullName>SDGR Approval</fullName>
            </value>
            <value>
                <fullName>GRS processing</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>