force-app/main/default/objects/Authority_to_Submit__c/fields/I_RS_Submission_date2__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Submission_date2__c</fullName>
    <inlineHelpText>Either the date the item has already been submitted, or the date you anticipate it will be submitted</inlineHelpText>
    <label>Submission date</label>
    <type>Date</type>
</CustomField>