force-app/main/default/objects/Authority_to_Submit__c/fields/I_RS_Supervisor_Instruction__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Supervisor_Instruction__c</fullName>
    <formula>&quot;By approving this form, you are certifying that:  &quot; &amp; br() &amp;

&quot;	•the thesis/exegesis complies with the provisions in Graduate Research Examinations Schedule B-Presentation of Theses for Graduate Research Degrees &quot; &amp; br() &amp; 

&quot;	•for practice-based degrees that the artefact(s) comply with the Guidelines for examinable components of practice-based degrees by research &quot; &amp; br() &amp;

&quot;	•in your opinion the examinable works are worthy of a candidate for the degree &quot; &amp; br() &amp;

&quot;	•the candidate’s declaration of authorship is correct and complies with the verbatim requirement of Schedule B (Appendix 1, Statement of authorship) &quot; &amp; br() &amp;

&quot;	•where there are co-authors outside the supervisory team, you have sighted the written confirmation from the co-author or coordinating author verifying the candidate’s contribution to the work. &quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supervisor Instruction</label>
    <type>Text</type>
</CustomField>