force-app/main/default/objects/Authority_to_Submit__c/fields/I_RS_Thesis_title__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Thesis_title__c</fullName>
    <formula>I_RS_Graduate_Research_Examination__r.I_RS_Short_Thesis_Title__c</formula>
    <inlineHelpText>If you wish to change your thesis title, please complete the online ‘Change in thesis topic form’ available at latrobe.edu.au/grs</inlineHelpText>
    <label>Thesis title</label>
    <type>Text</type>
</CustomField>