force-app/main/default/objects/Authority_to_Submit__c/validationRules/Lock_Record_for_researchers.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_Record_for_researchers</fullName>
    <active>true</active>
    <errorConditionFormula>OR(

AND(
($User.I_RS_Is_Researcher_User__c = &apos;1&apos;),
(ISCHANGED(I_RS_Status__c)),
(TEXT(PRIORVALUE(I_RS_Status__c)) &lt;&gt; &apos;Draft&apos;)
),

AND(
($User.I_RS_Is_Researcher_User__c = &apos;1&apos;),
NOT(ISCHANGED(I_RS_Status__c)),
(TEXT(I_RS_Status__c) &lt;&gt; &apos;Draft&apos;)
)

)</errorConditionFormula>
    <errorMessage>You do not have the permission to modify</errorMessage>
</ValidationRule>