force-app/main/default/objects/Authority_to_Submit__c/validationRules/Lock_Status_for_researchers.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_Status_for_researchers</fullName>
    <active>true</active>
    <errorConditionFormula>OR(

AND(
($User.I_RS_Is_Researcher_User__c = &apos;1&apos;),
(ISCHANGED(I_RS_Status__c))
)

)</errorConditionFormula>
    <errorMessage>You do not have permission to change to this status. Please contact GRS.</errorMessage>
</ValidationRule>