force-app/main/default/objects/Authority_to_Submit__c/validationRules/Record_Locked_for_Researchers.validationRule-meta.xml
<ValidationRule>
    <fullName>Record_Locked_for_Researchers</fullName>
    <active>true</active>
    <errorConditionFormula>$User.I_RS_Is_Researcher_User__c = &apos;1&apos; &amp;&amp;
!ISCHANGED(I_RS_Status__c) &amp;&amp;
(TEXT(PRIORVALUE(I_RS_Status__c)) &lt;&gt; &apos;Draft&apos;)</errorConditionFormula>
    <errorMessage>This form has been submitted so can’t be edited. Please contact GRS.</errorMessage>
</ValidationRule>