force-app/main/default/objects/Authority_to_Submit__c/validationRules/Who_Creates_ATS_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Who_Creates_ATS_validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISNEW() ,

NOT(
OR(
($UserRole.Name = &apos;GRS&apos;),
($Profile.Name = &apos;System Administrator&apos;),
AND(
($User.I_RS_Is_Researcher_User__c = &apos;1&apos;),
( CONTAINS($User.Id, I_RS_Graduate_Research_Examination__r.I_RS_Student__r.I_RS_Related_User__c) )
)
)
)
)</errorConditionFormula>
    <errorMessage>Only Candidate/GRS/Admin can create an ATS form.</errorMessage>
</ValidationRule>